--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -32,7 +32,7 @@ EXCHANGE_TYPE = direct
 AUTO_DELETE = true
 
 [IT490-Server]
-BROKER_HOST = localhost
+BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
 USER = admin
 PASSWORD = admin
