working deploymentHandler. Will be revising

--- a/db_config.env
+++ b/db_config.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost        
-DB_USER=root      
-DB_PASSWORD=admin 
-DB_NAME=it490test2
+DB_HOST=172.29.82.171        
+DB_USER=deployVM
+DB_PASSWORD=tetra2345 
+DB_NAME=it490db
